--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -147,6 +147,7 @@
    "execution_count": null,
    "source": [
     "sim.parcels_result.plot_features = {}\n",
+    "sim.parcels_result.add_plot_feature(NanSeparatedFeature.get_sd_full_coastline(), name=\"coast\")\n",
     "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
     "sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
     "sim.parcels_result.max_life = 86400 / 2\n",
