--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -27,6 +27,7 @@
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
     "from parcels_sim import ParcelsSimulation\n",
+    "from parcels_kernels import DeleteAfterLifetime, DeleteIntersectTijuana\n",
     "from parcels_analysis import *"
    ],
    "outputs": [],
@@ -71,16 +72,10 @@
     "grids = [HFRGrid(utils.FILES_ROOT / cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
-    "    sims.append(ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"]))"
-   ],
-   "outputs": [],
-   "metadata": {}
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "source": [
-    "fs = grids[0].fieldset"
+    "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
+    "    sim.add_kernel(DeleteAfterLifetime)\n",
+    "    # sim.add_kernel(DeleteIntersectTijuana)\n",
+    "    sims.append(sim)"
    ],
    "outputs": [],
    "metadata": {}
