--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -57,15 +57,8 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "import math\n",
     "from pathlib import Path\n",
-    "import time\n",
-    "import matplotlib.pyplot as plt\n",
-    "import xarray as xr\n",
     "import numpy as np\n",
-    "from parcels import FieldSet\n",
-    "from datetime import timedelta, datetime\n",
-    "from gridfill import fill\n",
     "\n",
     "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
@@ -96,11 +89,11 @@
    "source": [
     "files_root = Path(\"/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/current_netcdfs\")\n",
     "\n",
-    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-08.nc\")\n",
+    "target = HFRGrid(files_root / \"west_coast_1km_hourly/tj_plume_2020-02.nc\")\n",
     "\n",
     "interp_references = [\n",
-    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-08.nc\"),\n",
-    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-08.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_2km_hourly/tj_plume_2020-02.nc\"),\n",
+    "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-02.nc\"),\n",
     "]\n",
     "\n",
     "mask_nc = HFRGrid(files_root / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
@@ -369,9 +362,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3-parcels",
-   "language": "python",
-   "name": "py3-parcels"
+   "name": "python3",
+   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -384,6 +376,9 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.7.10"
+  },
+  "interpreter": {
+   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   }
  },
  "nbformat": 4,
