--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -26,8 +26,7 @@
    "source": [
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
-    "from parcels_sim import ParcelsSimulation\n",
-    "from parcels_kernels import DeleteAfterLifetime, DeleteIntersectTijuana\n",
+    "from parcels_sim import ParcelsSimulation, DeleteAfterLifetime\n",
     "from parcels_analysis import *"
    ],
    "outputs": [],
@@ -74,7 +73,6 @@
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
     "    sim.add_kernel(DeleteAfterLifetime)\n",
-    "    # sim.add_kernel(DeleteIntersectTijuana)\n",
     "    sims.append(sim)"
    ],
    "outputs": [],
@@ -142,10 +140,13 @@
    "execution_count": null,
    "source": [
     "sim.parcels_result.plot_features = {}\n",
+    "sim.parcels_result.add_coastline(utils.MATLAB_DIR / \"coastline.mat\")\n",
+    "sim.parcels_result.process_coastline_collisions()\n",
+    "print(\"processed collisions\")\n",
     "sim.parcels_result.add_plot_feature(NanSeparatedFeature.get_sd_full_coastline(), name=\"coast\")\n",
     "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
     "sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
-    "sim.parcels_result.max_life = 86400 / 2\n",
+    "sim.parcels_result.max_life = 86400 * 3\n",
     "for sim in sims:\n",
     "    sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
     "    print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
