--- a/plume_mat_fieldset_loader.ipynb
+++ b/plume_mat_fieldset_loader.ipynb
@@ -2,27 +2,25 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "# load mats into netcdfs from plume tracker"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -31,20 +29,20 @@
     "\n",
     "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "change settings accordingly"
-   ]
+   ],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "start_time = np.datetime64(\"2020-08-01T00:00\", \"m\")\n",
     "end_time = np.datetime64(\"2020-08-31T23:00\", \"m\")\n",
@@ -54,13 +52,13 @@
     "# coord_grid_path = utils.MATLAB_DIR / \"sdcodargrid_new.mat\"\n",
     "\n",
     "mat_tot_dir = utils.MATLAB_DIR / \"support_data/TrackerOutput/hourly\""
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "TIJUANA_RIVER_DOMAIN = dict(\n",
     "    S=32.528,\n",
@@ -85,22 +83,22 @@
     "coastline = np.array([lats, lons])\n",
     "# just filter out the problematic upper coastline where it goes up and down\n",
     "coastline = coastline[:, :288]"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "plt.scatter(coastline[1], coastline[0], s=4)"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "def coord_inland(coastline, lat, lon):\n",
     "    lower_ind = np.where(coastline[0] <= lat)[0]\n",
@@ -169,15 +167,13 @@
     "        }\n",
     "    )\n",
     "    return ds"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
    "source": [
     "ds_total = None\n",
     "current_time = start_time\n",
@@ -186,7 +182,7 @@
     "    date_parsed, time_parsed = parse_time(current_time)\n",
     "    filename = mat_tot_dir / f\"Tot_SDLJ_{date_parsed}_{time_parsed}.mat\"\n",
     "    if filename.is_file():\n",
-    "        ds = dataset_from_mat(coord_grid_path, filename, True)\n",
+    "        ds = dataset_from_mat(coord_grid_path, filename, False)\n",
     "        if ds_total is None:\n",
     "            ds_total = ds\n",
     "        else:\n",
@@ -194,36 +190,40 @@
     "    else:\n",
     "        print(f\"file {filename} not found\")\n",
     "    current_time += incr"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {
+    "scrolled": true
+   }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "# display fieldset to see if data was loaded correctly\n",
     "fs = xr_dataset_to_fieldset(ds_total)\n",
     "fs.U.show()"
-   ]
+   ],
+   "outputs": [],
+   "metadata": {}
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [],
    "source": [
     "date_parsed, _ = parse_time(start_time)\n",
-    "ds_total.to_netcdf(f\"current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")\n",
-    "print(f\"saved to current_netcdfs/Tot_SDLJ_{date_parsed}.nc\")"
-   ]
+    "saveto = utils.FILES_ROOT / f\"current_netcdfs/Tot_SDLJ_{date_parsed}.nc\"\n",
+    "ds_total.to_netcdf(saveto)\n",
+    "print(f\"saved to {saveto}\")"
+   ],
+   "outputs": [],
+   "metadata": {}
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py3_parcels",
-   "language": "python",
-   "name": "py3_parcels"
+   "name": "python3",
+   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -235,7 +235,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.7.10"
+  },
+  "interpreter": {
+   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   }
  },
  "nbformat": 4,
