Attempt a random walk kernel (from plume tracker)

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -28,7 +28,7 @@
    "source": [
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
-    "from parcels_sim import ParcelsSimulation, DeleteAfterLifetime\n",
+    "from parcels_sim import ParcelsSimulation, DeleteAfterLifetime, RandomWalk\n",
     "from parcels_analysis import *"
    ]
   },
@@ -75,6 +75,7 @@
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
     "    sim.add_kernel(DeleteAfterLifetime)\n",
+    "    sim.add_kernel(RandomWalk)\n",
     "    sims.append(sim)"
    ]
   },
