--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -2,15 +2,16 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "# missing data interpolation\n",
     "\n",
     "statistics is the answer to everything"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### potential shenanigans\n",
     "\n",
@@ -30,32 +31,33 @@
     "DINEOF (could only find an implementation in R)\n",
     "\n",
     "to be honest I don't understand any of these methods but they look cool"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### currently implemented:\n",
     "\n",
     "rip data straight from the lower resolution data for areas where data is considered missing in the high resolution data"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%matplotlib inline\n",
     "%load_ext autoreload\n",
     "%autoreload 2"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "from pathlib import Path\n",
     "import numpy as np\n",
@@ -63,12 +65,11 @@
     "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
     "from constants import *"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### target and interp_references\n",
     "\n",
@@ -80,12 +81,13 @@
     "- lat and lon domain should be bigger than the target's to prevent any out-of-bounds complications\n",
     "\n",
     "`mask_nc` must have the exact same lat and lon dimensions of the target"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "files_root = Path(\"/Volumes/T7/Documents/Programs/scripps-cordc/parcels_westcoast/current_netcdfs\")\n",
     "\n",
@@ -97,20 +99,20 @@
     "]\n",
     "\n",
     "mask_nc = HFRGrid(files_root / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### check validity of interpolation references"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def validate_grids(target, references, mask):\n",
     "    targ_times, targ_lats, targ_lons = target.get_coords()\n",
@@ -135,44 +137,44 @@
     "    lon_inbounds = (mask_lons[0] == targ_min[1]) and (mask_lons[-1] == targ_max[1])\n",
     "    if not (lat_inbounds and lon_inbounds):\n",
     "        raise ValueError(\"Incorrect mask dimensions\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "validate_grids(target, interp_references, mask_nc)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### interpolation type\n",
     "\n",
     "more information can be found in the `tutorial_interpolation` notebook\n",
     "\n",
     "EDIT: just use `linear`"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## nan values and parcels\n",
     "\n",
     "note that when this xarray Dataset is passed into parcels, all the nan values change to 0 and the mask generation won't work anymore\n",
     "\n",
     "so the Dataset is copied for use with the FieldSet instead"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "no_data = utils.generate_mask_none(mask_nc.xrds[\"u\"].values)\n",
     "no_data = np.tile(no_data, (target.xrds[\"time\"].size, 1, 1))\n",
@@ -180,24 +182,24 @@
     "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
     "print(f\"total invalid values on target data: {num_invalid}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### use of Parcels Field for interpolation\n",
     "\n",
     "indexing Field values goes [time, depth, lat, lon]\n",
     "\n",
     "Field does linear interpolation automatically when indexing values between it's coordinate values"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "def get_interped(i, ref, invalid_where):\n",
     "    \"\"\"\n",
@@ -219,20 +221,20 @@
     "    if np.isnan(ref.get_closest_current(t, lat, lon)[0]) or current_abs == 0:\n",
     "        return np.nan, np.nan\n",
     "    return current_u, current_v"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### linear interpolation using lower resolution data"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "target_interped_u = target.xrds[\"u\"].values.copy()\n",
     "target_interped_v = target.xrds[\"v\"].values.copy()\n",
@@ -253,12 +255,11 @@
     "    print(f\"total invalid values after interpolation with {f}: {invalid_interped.sum()}\")\n",
     "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
     "print(f\"total invalid values on interpolated: {invalid_interped.sum()}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## even more filling with PLS and smoothing with DCT shenanigans\n",
     "\n",
@@ -267,12 +268,13 @@
     "https://www.mathworks.com/help/matlab/matlab-engine-for-python.html\n",
     "\n",
     "https://www.mathworks.com/matlabcentral/fileexchange/25634-smoothn"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import matlab.engine\n",
     "\n",
@@ -296,74 +298,76 @@
     "    target_smoothed_v[i] = v_array\n",
     "\n",
     "eng.quit()"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# mask the filled data\n",
     "# target_smoothed_u[no_data] = np.nan\n",
     "# target_smoothed_v[no_data] = np.nan"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### formatting and saving"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "# re-add coordinates, dimensions, and metadata to interpolated data\n",
     "darr_u = utils.conv_to_dataarray(target_smoothed_u, target.xrds[\"u\"])\n",
     "darr_v = utils.conv_to_dataarray(target_smoothed_v, target.xrds[\"v\"])\n",
     "target_interped_xrds = target.xrds.drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "save_path = str(target.path).split(\".nc\")[0] + \"_interped.nc\"\n",
     "target_interped_xrds.to_netcdf(save_path)\n",
     "print(f\"saved to {save_path}\")"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### display field to see if interpolation worked"
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "fs_interp = xr_dataset_to_fieldset(target_interped_xrds)\n",
     "target.fieldset.U.show()  # uninterpolated\n",
     "fs_interp.U.show()  # interpolated, gapfilled, smoothed"
-   ],
-   "outputs": [],
-   "metadata": {}
+   ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
+  },
   "kernelspec": {
-   "name": "python3",
-   "display_name": "Python 3.7.10 64-bit ('py3-parcels': conda)"
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -375,10 +379,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.10"
-  },
-  "interpreter": {
-   "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
