--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -60,6 +60,8 @@
     "#     \"buoy_track.json\",\n",
     "]\n",
     "\n",
+    "# define domain if you want to change the domain that is shown when plotted\n",
+    "# otherwise, it will just display the entirety of the netcdf file\n",
     "# domain = None\n",
     "domain = dict(\n",
     "    S=32.53,\n",
@@ -70,10 +72,11 @@
     "domain = TIJUANA_MOUTH_DOMAIN\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
-    "grids = [HFRGrid(utils.FILES_ROOT / cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
+    "grids = [HFRGrid(cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
+    "    # add custom kernels here, I will make this configurable through the json later\n",
     "    sim.add_kernel(DeleteAfterLifetime)\n",
     "    sim.add_kernel(RandomWalk)\n",
     "    sims.append(sim)"
@@ -98,7 +101,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [],
    "source": [
     "[sim.pset.show(field=\"vector\", vmax=ParcelsSimulation.MAX_V) for sim in sims]"
@@ -146,12 +151,17 @@
    "outputs": [],
    "source": [
     "sim.parcels_result.plot_features = {}\n",
+    "# coastline stuff, use to delete particles that collide with a coastline\n",
     "sim.parcels_result.add_coastline(utils.MATLAB_DIR / \"coastline.mat\")\n",
     "sim.parcels_result.process_coastline_collisions()\n",
     "print(\"processed collisions\")\n",
+    "# add other plot features like coastlines or points of interest if applicable\n",
+    "# (look at ParticlePlotFeature classes in parcels_analysis.py)\n",
+    "# documentation will come soon :)\n",
     "sim.parcels_result.add_plot_feature(NanSeparatedFeature.get_sd_full_coastline(), name=\"coast\")\n",
     "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
     "sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
+    "# particles will show age based on their color, control it through this variable\n",
     "sim.parcels_result.max_life = 86400 * 3\n",
     "for sim in sims:\n",
     "    sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
