Most fix existing configs

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -113,9 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### simulation setup and execution\n",
-    "\n",
-    "simulation parameter setup"
+    "### simulation execution"
    ]
   },
   {
@@ -134,9 +132,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### gif generation\n",
+    "### plot and gif generation\n",
     "\n",
-    "don't have to run, requires [magick](https://imagemagick.org/index.php)\n",
+    "gif generation requires [magick](https://imagemagick.org/index.php)\n",
+    "\n",
+    "if it doesn't work jusut comment out the gif generation line\n",
     "\n",
     "the gifs will be saved `snapshots/`"
    ]
@@ -150,22 +150,25 @@
    },
    "outputs": [],
    "source": [
-    "sim.parcels_result.plot_features = {}\n",
-    "# coastline stuff, use to delete particles that collide with a coastline\n",
-    "sim.parcels_result.add_coastline(utils.MATLAB_DIR / \"coastline.mat\")\n",
-    "sim.parcels_result.process_coastline_collisions()\n",
-    "print(\"processed collisions\")\n",
-    "# add other plot features like coastlines or points of interest if applicable\n",
-    "# (look at ParticlePlotFeature classes in parcels_analysis.py)\n",
-    "# documentation will come soon :)\n",
-    "sim.parcels_result.add_plot_feature(NanSeparatedFeature.get_sd_full_coastline(), name=\"coast\")\n",
-    "sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
-    "sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
-    "# particles will show age based on their color, control it through this variable\n",
-    "sim.parcels_result.max_life = 86400 * 3\n",
     "for sim in sims:\n",
-    "    sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
-    "    print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
+    "    if sim.cfg[\"save_snapshots\"]:\n",
+    "        sim.parcels_result.plot_features = {}\n",
+    "        # coastline stuff, use to delete particles that collide with a coastline\n",
+    "        sim.parcels_result.add_coastline(utils.MATLAB_DIR / \"coastline.mat\")\n",
+    "        sim.parcels_result.process_coastline_collisions()\n",
+    "        print(\"processed collisions\")\n",
+    "        # add other plot features like coastlines or points of interest if applicable\n",
+    "        # (look at ParticlePlotFeature classes in parcels_analysis.py)\n",
+    "        # documentation will come soon :)\n",
+    "        sim.parcels_result.add_plot_feature(NanSeparatedFeature.get_sd_full_coastline(), name=\"coast\")\n",
+    "        sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
+    "        sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
+    "        # particles will show age based on their color, control it through this variable\n",
+    "        sim.parcels_result.max_life = 86400 * 3\n",
+    "        for sim in sims:\n",
+    "            sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
+    "            # comment out the generate_gif line if it doesn't work\n",
+    "            print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
    ]
   }
  ],
