--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -28,7 +28,8 @@
    "source": [
     "import utils\n",
     "from parcels_utils import HFRGrid\n",
-    "from parcels_sim import ParcelsSimulation, DeleteAfterLifetime, RandomWalk\n",
+    "from parcels_sim import ParcelsSimulation\n",
+    "from parcels_kernels import DeleteAfterLifetime, RandomWalk\n",
     "from parcels_analysis import *"
    ]
   },
@@ -60,8 +61,7 @@
     "#     \"buoy_track.json\",\n",
     "]\n",
     "\n",
-    "# define domain if you want to change the domain that is shown when plotted\n",
-    "# otherwise, it will just display the entirety of the netcdf file\n",
+    "# in case you want to override the domain from the config for some reason\n",
     "# domain = None\n",
     "domain = dict(\n",
     "    S=32.53,\n",
