--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -26,11 +26,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
+    "\n",
     "import utils\n",
-    "from parcels_utils import HFRGrid\n",
+    "from parcels_utils import HFRGrid, read_netcdf_info\n",
     "from parcels_sim import ParcelsSimulation\n",
-    "from parcels_kernels import DeleteAfterLifetime, RandomWalk\n",
-    "from parcels_analysis import *"
+    "from parcels_analysis import add_feature_set_to_result"
    ]
   },
   {
@@ -49,36 +50,23 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
+    "#     \"plume_track.json\",\n",
     "#     \"plume_track_totsdlj.json\",\n",
     "#     \"tijuana_interped.json\",\n",
     "#     \"tijuana_lin.json\",\n",
     "#     \"tijuana_lin_aggr.json\",\n",
     "#     \"tijuana_less.json\",\n",
-    "#     \"tijuana_now.json\",\n",
+    "    \"tijuana_now.json\",\n",
     "#     \"tijuana_onerep.json\",\n",
     "#     \"tijuana_range.json\",\n",
     "#     \"buoy_track.json\",\n",
     "]\n",
     "\n",
-    "# in case you want to override the domain from the config for some reason\n",
-    "# domain = None\n",
-    "domain = dict(\n",
-    "    S=32.53,\n",
-    "    N=32.564,\n",
-    "    W=-117.162,\n",
-    "    E=-117.105\n",
-    ")\n",
-    "domain = TIJUANA_MOUTH_DOMAIN\n",
-    "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
-    "grids = [HFRGrid(cfg[\"netcdf_path\"]) for cfg in loaded_configs]\n",
+    "grids = [HFRGrid(read_netcdf_info(cfg[\"netcdf_path\"])) for cfg in loaded_configs]\n",
     "sims = []\n",
     "for i in range(len(loaded_configs)):\n",
     "    sim = ParcelsSimulation(loaded_configs[i][\"name\"], grids[i], loaded_configs[i][\"parcels_config\"])\n",
-    "    # add custom kernels here, I will make this configurable through the json later\n",
-    "    sim.add_kernel(DeleteAfterLifetime)\n",
-    "    sim.add_kernel(RandomWalk)\n",
     "    sims.append(sim)"
    ]
   },
@@ -136,7 +124,7 @@
     "\n",
     "gif generation requires [magick](https://imagemagick.org/index.php)\n",
     "\n",
-    "if it doesn't work jusut comment out the gif generation line\n",
+    "if it doesn't work just comment out the gif generation line\n",
     "\n",
     "the gifs will be saved `snapshots/`"
    ]
@@ -150,25 +138,23 @@
    },
    "outputs": [],
    "source": [
-    "for sim in sims:\n",
-    "    if sim.cfg[\"save_snapshots\"]:\n",
-    "        sim.parcels_result.plot_features = {}\n",
-    "        # coastline stuff, use to delete particles that collide with a coastline\n",
-    "        sim.parcels_result.add_coastline(utils.MATLAB_DIR / \"coastline.mat\")\n",
-    "        sim.parcels_result.process_coastline_collisions()\n",
-    "        print(\"processed collisions\")\n",
+    "for i, sim in enumerate(sims):\n",
+    "    cfg = loaded_configs[i]\n",
+    "    if cfg[\"save_snapshots\"]:\n",
+    "        if \"coastline\" in cfg and cfg[\"coastline\"] not in (None, {}):\n",
+    "            # coastline stuff, use to delete particles that collide with a coastline\n",
+    "            lats, lons = utils.load_geo_points(cfg[\"coastline\"])\n",
+    "            sim.parcels_result.add_coastline(lats, lons)\n",
+    "            sim.parcels_result.process_coastline_collisions()\n",
+    "            print(\"processed collisions\")\n",
     "        # add other plot features like coastlines or points of interest if applicable\n",
     "        # (look at ParticlePlotFeature classes in parcels_analysis.py)\n",
     "        # documentation will come soon :)\n",
-    "        sim.parcels_result.add_plot_feature(NanSeparatedFeature.get_sd_full_coastline(), name=\"coast\")\n",
-    "        sim.parcels_result.add_plot_feature(StationFeature.get_sd_stations(), name=\"station\")\n",
-    "        sim.parcels_result.add_plot_feature(LatTrackedPointFeature.get_tijuana_mouth(), name=\"mouth\")\n",
-    "        # particles will show age based on their color, control it through this variable\n",
-    "        sim.parcels_result.max_life = 86400 * 3\n",
-    "        for sim in sims:\n",
-    "            sim.parcels_result.generate_all_plots(utils.FILES_ROOT / utils.PICUTRE_DIR / sim.name, domain=domain)\n",
-    "            # comment out the generate_gif line if it doesn't work\n",
-    "            print(sim.parcels_result.generate_gif(utils.FILES_ROOT / utils.PICUTRE_DIR / f\"{sim.name}.gif\"))"
+    "        if \"plot_feature_set\" in cfg and cfg[\"plot_feature_set\"] not in (None, \"\"):\n",
+    "            add_feature_set_to_result(sim.parcels_result, cfg[\"plot_feature_set\"])\n",
+    "        sim.parcels_result.generate_all_plots(os.path.join(cfg[\"save_dir_snapshots\"], sim.name), domain=cfg[\"shown_domain\"])\n",
+    "        # comment out the generate_gif line if it doesn't work\n",
+    "        print(sim.parcels_result.generate_gif(os.path.join(cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))"
    ]
   }
  ],
