Separate plotting configs

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -141,20 +141,18 @@
     "for i, sim in enumerate(sims):\n",
     "    cfg = loaded_configs[i]\n",
     "    if cfg[\"save_snapshots\"]:\n",
-    "        if \"coastline\" in cfg and cfg[\"coastline\"] not in (None, {}):\n",
+    "        plotting_cfg = cfg[\"plotting_config\"]\n",
+    "        if \"coastline\" in plotting_cfg and plotting_cfg[\"coastline\"] not in (None, {}):\n",
     "            # coastline stuff, use to delete particles that collide with a coastline\n",
-    "            lats, lons = utils.load_geo_points(cfg[\"coastline\"])\n",
+    "            lats, lons = utils.load_geo_points(plotting_cfg[\"coastline\"])\n",
     "            sim.parcels_result.add_coastline(lats, lons)\n",
     "            sim.parcels_result.process_coastline_collisions()\n",
     "            print(\"processed collisions\")\n",
-    "        # add other plot features like coastlines or points of interest if applicable\n",
-    "        # (look at ParticlePlotFeature classes in parcels_analysis.py)\n",
-    "        # documentation will come soon :)\n",
-    "        if \"plot_feature_set\" in cfg and cfg[\"plot_feature_set\"] not in (None, \"\"):\n",
-    "            add_feature_set_to_result(sim.parcels_result, cfg[\"plot_feature_set\"])\n",
-    "        sim.parcels_result.generate_all_plots(os.path.join(cfg[\"save_dir_snapshots\"], sim.name), domain=cfg[\"shown_domain\"])\n",
+    "        if \"plot_feature_set\" in plotting_cfg and plotting_cfg[\"plot_feature_set\"] not in (None, \"\"):\n",
+    "            add_feature_set_to_result(sim.parcels_result, plotting_cfg[\"plot_feature_set\"])\n",
+    "        sim.parcels_result.generate_all_plots(os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name), domain=plotting_cfg[\"shown_domain\"], land=plotting_cfg[\"draw_coasts\"])\n",
     "        # comment out the generate_gif line if it doesn't work\n",
-    "        print(sim.parcels_result.generate_gif(os.path.join(cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))"
+    "        print(sim.parcels_result.generate_gif(os.path.join(plotting_cfg[\"save_dir_snapshots\"], f\"{sim.name}.gif\")))"
    ]
   }
  ],
