--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -32,33 +32,8 @@
     "import xarray as xr\n",
     "\n",
     "import utils\n",
+    "import thredds_utils\n",
     "from parcels_utils import xr_dataset_to_fieldset"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataset_url_6kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/6km/hourly/RTV/HFRADAR_US_West_Coast_6km_Resolution_Hourly_RTV_best.ncd\"\n",
-    "dataset_url_2kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/2km/hourly/RTV/HFRADAR_US_West_Coast_2km_Resolution_Hourly_RTV_best.ncd\"\n",
-    "dataset_url_1kmhourly = \"http://hfrnet-tds.ucsd.edu/thredds/dodsC/HFR/USWC/1km/hourly/RTV/HFRADAR_US_West_Coast_1km_Resolution_Hourly_RTV_best.ncd\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "num_chunks = 50\n",
-    "\n",
-    "thredds_data = {\n",
-    "    utils.DATA_6KM: xr.open_dataset(dataset_url_6kmhourly, chunks={\"time\": num_chunks}),\n",
-    "    utils.DATA_2KM: xr.open_dataset(dataset_url_2kmhourly, chunks={\"time\": num_chunks}),\n",
-    "    utils.DATA_1KM: xr.open_dataset(dataset_url_1kmhourly, chunks={\"time\": num_chunks})\n",
-    "}"
    ]
   },
   {
@@ -145,18 +120,18 @@
    "outputs": [],
    "source": [
     "region_data = [\n",
-    "    # (\"tj_sample\", utils.DATA_1KM, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "#     (\"tj_plume\", utils.DATA_1KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
-    "#     (\"tj_plume\", utils.DATA_2KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tj_plume\", utils.DATA_6KM, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
-    "#     (\"tijuana_river\", utils.DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river\", utils.DATA_2KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river\", utils.DATA_6KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "#     (\"tijuana_river_small\", utils.DATA_1KM, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
-    "#     (\"tijuana_river_now\", utils.DATA_1KM, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
-    "#     (\"tijuana_river_now\", utils.DATA_2KM, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
-    "#     (\"tijuana_river_now\", utils.DATA_6KM, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
-    "    (\"missing_buoy\", utils.DATA_6KM, (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
+    "    # (\"tj_sample\", thredds_utils.USWC_1KM_HOURLY, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_plume\", thredds_utils.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_plume\", thredds_utils.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tj_plume\", thredds_utils.USWC_6KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
+    "#     (\"tijuana_river\", thredds_utils.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river\", thredds_utils.USWC_2KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river\", thredds_utils.USWC_6KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "#     (\"tijuana_river_small\", utils.USWC_1KM_HOURLY, (\"2020-06-16T21\", \"2020-06-23T21\"), (32.528, 32.6), (-117.19, -117.11), False)\n",
+    "#     (\"tijuana_river_now\", thredds_utils.USWC_1KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.528, 32.71), (-117.29, -117.11), False),\n",
+    "#     (\"tijuana_river_now\", thredds_utils.USWC_2KM_HOURLY, get_latest_span(np.timedelta64(300, \"D\")), (32.524, 32.75), (-117.32, -117.09), False),\n",
+    "#     (\"tijuana_river_now\", thredds_utils.USWC_6KM_HOURLY, (\"2019-09-28T21:00\", \"2020-07-24T20\"), (32.35, 32.80), (-117.33, -116.9), False),\n",
+    "    (\"missing_buoy\", thredds_utils.USWC_6KM_HOURLY, (\"2021-01-29T05\", \"2021-02-02T16\"), (33.15, 33.778072), (-118.697986, -117.6), False)\n",
     "]\n",
     "\n",
     "\n",
@@ -170,6 +145,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# broken now, TODO fix pls\n",
     "regions = []\n",
     "for rd in region_data:\n",
     "    new_reg = get_region(rd)\n",
