--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -98,6 +98,8 @@
     "    HFRGrid(files_root / \"west_coast_6km_hourly/tj_plume_2020-02.nc\"),\n",
     "]\n",
     "\n",
+    "# mask_nc can be none if you do not need to filter out land currents\n",
+    "mask_nc = None\n",
     "mask_nc = HFRGrid(files_root / \"west_coast_1km_hourly/tj_sample.nc\", init_fs=False)"
    ]
   },
@@ -114,7 +116,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_grids(target, references, mask):\n",
+    "def validate_grids(target, references, mask=None):\n",
     "    targ_times, targ_lats, targ_lons = target.get_coords()\n",
     "    targ_min = (targ_lats[0], targ_lons[0])\n",
     "    targ_max = (targ_lats[-1], targ_lons[-1])\n",
@@ -127,16 +129,17 @@
     "        if not (lat_inbounds and lon_inbounds and time_inbounds):\n",
     "            raise ValueError(\"Incorrect reference dimensions\")\n",
     "    # check mask\n",
-    "    _, mask_lats, mask_lons = mask.get_coords()\n",
-    "    mask_same_res = (len(targ_lats) == len(mask_lats)) and (len(targ_lons) == len(mask_lons))\n",
-    "    if not mask_same_res:\n",
-    "        raise ValueError(\"Mask is not the same lat/lon shape as target\")\n",
-    "    # mask_nc should just be sliced before being used\n",
-    "    # change these asserts to >= later when that's done\n",
-    "    lat_inbounds = (mask_lats[0] == targ_min[0]) and (mask_lats[-1] == targ_max[0])\n",
-    "    lon_inbounds = (mask_lons[0] == targ_min[1]) and (mask_lons[-1] == targ_max[1])\n",
-    "    if not (lat_inbounds and lon_inbounds):\n",
-    "        raise ValueError(\"Incorrect mask dimensions\")"
+    "    if mask is not None:\n",
+    "        _, mask_lats, mask_lons = mask.get_coords()\n",
+    "        mask_same_res = (len(targ_lats) == len(mask_lats)) and (len(targ_lons) == len(mask_lons))\n",
+    "        if not mask_same_res:\n",
+    "            raise ValueError(\"Mask is not the same lat/lon shape as target\")\n",
+    "        # mask should just be sliced before being used\n",
+    "        # change these asserts to >= later when that's done\n",
+    "        lat_inbounds = (mask_lats[0] == targ_min[0]) and (mask_lats[-1] == targ_max[0])\n",
+    "        lon_inbounds = (mask_lons[0] == targ_min[1]) and (mask_lons[-1] == targ_max[1])\n",
+    "        if not (lat_inbounds and lon_inbounds):\n",
+    "            raise ValueError(\"Incorrect mask dimensions\")"
    ]
   },
   {
@@ -145,7 +148,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "validate_grids(target, interp_references, mask_nc)"
+    "validate_grids(target, interp_references, mask=mask_nc)"
    ]
   },
   {
@@ -176,8 +179,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "no_data = utils.generate_mask_none(mask_nc.xrds[\"u\"].values)\n",
-    "no_data = np.tile(no_data, (target.xrds[\"time\"].size, 1, 1))\n",
+    "if mask_nc is not None:\n",
+    "    no_data = utils.generate_mask_none(mask_nc.xrds[\"u\"].values)\n",
+    "    no_data = np.tile(no_data, (target.xrds[\"time\"].size, 1, 1))\n",
     "invalid = utils.generate_mask_invalid(target.xrds[\"u\"].values)\n",
     "invalid_pos = np.where(invalid)\n",
     "num_invalid = invalid.sum()\n",
@@ -307,8 +311,9 @@
    "outputs": [],
    "source": [
     "# mask the filled data\n",
-    "# target_smoothed_u[no_data] = np.nan\n",
-    "# target_smoothed_v[no_data] = np.nan"
+    "if mask_nc is not None:\n",
+    "    target_smoothed_u[no_data] = np.nan\n",
+    "    target_smoothed_v[no_data] = np.nan"
    ]
   },
   {
@@ -365,9 +370,9 @@
    "hash": "f2b639208b218da688d617c97dbb97f29e52ab8204d2c4d4c192e2d843ea0177"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "py3-parcels",
    "language": "python",
-   "name": "python3"
+   "name": "py3-parcels"
   },
   "language_info": {
    "codemirror_mode": {
@@ -379,7 +384,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.10"
   }
  },
  "nbformat": 4,
