Add plot feature comments, remove old configs

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -50,13 +50,13 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "#     \"plume_track.json\",\n",
+    "    \"plume_track.json\",\n",
     "#     \"plume_track_totsdlj.json\",\n",
     "#     \"tijuana_interped.json\",\n",
     "#     \"tijuana_lin.json\",\n",
     "#     \"tijuana_lin_aggr.json\",\n",
     "#     \"tijuana_less.json\",\n",
-    "    \"tijuana_now.json\",\n",
+    "#     \"tijuana_now.json\",\n",
     "#     \"tijuana_onerep.json\",\n",
     "#     \"tijuana_range.json\",\n",
     "#     \"buoy_track.json\",\n",
