More cleanup and comments
parcels_analysis cleanup mostly

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -94,7 +94,7 @@
    },
    "outputs": [],
    "source": [
-    "[sim.pset.show(field=\"vector\", vmax=ParcelsSimulation.MAX_V) for sim in sims]"
+    "[sim.pset.show(field=\"vector\") for sim in sims]"
    ]
   },
   {
