Update README and some comments

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -6,7 +6,9 @@
    "source": [
     "# missing data interpolation\n",
     "\n",
-    "statistics is the answer to everything"
+    "statistics is the answer to everything\n",
+    "\n",
+    "Use this notebook to gapfill a saved netcdf file."
    ]
   },
   {
@@ -72,6 +74,8 @@
    "metadata": {},
    "source": [
     "### target and interp_references\n",
+    "\n",
+    "#### Change these variables\n",
     "\n",
     "`target` is the data you are interpolating.\n",
     "\n",
@@ -148,6 +152,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# comment this out if you so desire, at your own risk :)\n",
     "validate_grids(target, interp_references, mask=mask_nc)"
    ]
   },
