--- a/access_thredds.ipynb
+++ b/access_thredds.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# access thredds\n",
     "\n",
-    "getting different regions of current data manually instead of using the auto-generated regions."
+    "Download sliced netcdf data from Thredds"
    ]
   },
   {
@@ -42,28 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_region(data):\n",
-    "    time_range = get_time_slice(data[2])\n",
-    "    if data[5]:\n",
-    "        lat_range = utils.include_coord_range(data[3], thredds_data[data[1]][\"lat\"].values)\n",
-    "        lon_range = utils.include_coord_range(data[4], thredds_data[data[1]][\"lon\"].values)\n",
-    "    else:\n",
-    "        lat_range = data[3]\n",
-    "        lon_range = data[4]\n",
-    "    return dict(\n",
-    "        name = data[0],\n",
-    "        category = data[1],\n",
-    "        time = time_range,\n",
-    "        lat = lat_range,\n",
-    "        lon = lon_range,\n",
-    "        domain = {\n",
-    "            \"S\": lat_range[0],\n",
-    "            \"N\": lat_range[1],\n",
-    "            \"W\": lon_range[0],\n",
-    "            \"E\": lon_range[1],\n",
-    "        }\n",
-    "    )\n",
-    "\n",
     "def get_latest_span(delta):\n",
     "    # GMT, data recorded hourly\n",
     "    time_now = np.datetime64(\"now\", \"h\")\n",
@@ -84,9 +62,9 @@
     "    for m in months:\n",
     "        days = np.arange(m, m + np.timedelta64(1, \"M\"), dtype=\"datetime64[D]\")\n",
     "        timerng = (np.datetime64(days[0], \"h\"), days[-1] + np.timedelta64(23, \"h\"))\n",
-    "        reg1 = (f\"{name}_{m}\", utils.DATA_1KM, timerng, lat_rng, lon_rng, False)\n",
-    "        reg2 = (f\"{name}_{m}\", utils.DATA_2KM, timerng, lat_rng, lon_rng, True)\n",
-    "        reg6 = (f\"{name}_{m}\", utils.DATA_6KM, timerng, lat_rng, lon_rng, True)\n",
+    "        reg1 = (f\"{name}_{m}\", thredds_utils.USWC_1KM_HOURLY, timerng, lat_rng, lon_rng, False)\n",
+    "        reg2 = (f\"{name}_{m}\", thredds_utils.USWC_2KM_HOURLY, timerng, lat_rng, lon_rng, True)\n",
+    "        reg6 = (f\"{name}_{m}\", thredds_utils.USWC_6KM_HOURLY, timerng, lat_rng, lon_rng, True)\n",
     "        regions.append(reg1)\n",
     "        regions.append(reg2)\n",
     "        regions.append(reg6)\n",
@@ -119,8 +97,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# tuple reference\n",
+    "# (name, region code, time range, lat range, lon range, include domain endpoints)\n",
     "region_data = [\n",
-    "    # (\"tj_sample\", thredds_utils.USWC_1KM_HOURLY, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
+    "#     (\"tj_sample\", thredds_utils.USWC_1KM_HOURLY, (\"2020-01-10T00\", \"2020-08-11T00\", 200), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "#     (\"tj_plume\", thredds_utils.USWC_1KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), False),\n",
     "#     (\"tj_plume\", thredds_utils.USWC_2KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
     "#     (\"tj_plume\", thredds_utils.USWC_6KM_HOURLY, (\"2020-08-01T01\", \"2020-08-14T13\"), (32.11093, 32.73124), (-117.565, -116.9924), True),\n",
@@ -145,18 +125,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# broken now, TODO fix pls\n",
     "regions = []\n",
     "for rd in region_data:\n",
-    "    new_reg = get_region(rd)\n",
-    "    if new_reg[\"time\"].start >= np.datetime64(\"now\", \"h\"):\n",
-    "        print(f\"data starting from time {new_reg['time'].start} is in the future\")\n",
-    "        continue\n",
-    "    new_reg[\"dataset\"] = thredds_data[new_reg[\"category\"]].sel(\n",
-    "        time=new_reg[\"time\"],\n",
-    "        lat=slice(new_reg[\"lat\"][0], new_reg[\"lat\"][1]),\n",
-    "        lon=slice(new_reg[\"lon\"][0], new_reg[\"lon\"][1]),\n",
-    "    )\n",
+    "    dataset = thredds_utils.get_thredds_dataset(rd[1], rd[2], rd[3], rd[4], inclusive=rd[5])\n",
+    "    new_reg = {\"name\": rd[0], \"dataset\": dataset}\n",
     "    regions.append(new_reg)\n",
     "    print(f\"region {new_reg['name']} data megabytes: {new_reg['dataset'].nbytes / 1024 / 1024}\")"
    ]
@@ -168,7 +140,7 @@
    "outputs": [],
    "source": [
     "for r in regions:\n",
-    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR / utils.filename_dict[r[\"category\"]])\n",
+    "    save_dir = utils.create_path(utils.CURRENT_NETCDF_DIR)\n",
     "    filename = f\"{r['name']}.nc\"\n",
     "    # save file\n",
     "    r[\"dataset\"].to_netcdf(save_dir / filename)\n",
