Refactor load_geo_points

--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -51,14 +51,7 @@
    "source": [
     "configs = [\n",
     "    \"plume_track.json\",\n",
-    "#     \"plume_track_totsdlj.json\",\n",
-    "#     \"tijuana_interped.json\",\n",
-    "#     \"tijuana_lin.json\",\n",
-    "#     \"tijuana_lin_aggr.json\",\n",
-    "#     \"tijuana_less.json\",\n",
     "#     \"tijuana_now.json\",\n",
-    "#     \"tijuana_onerep.json\",\n",
-    "#     \"tijuana_range.json\",\n",
     "#     \"buoy_track.json\",\n",
     "]\n",
     "\n",
@@ -144,7 +137,7 @@
     "        plotting_cfg = cfg[\"plotting_config\"]\n",
     "        if \"coastline\" in plotting_cfg and plotting_cfg[\"coastline\"] not in (None, {}):\n",
     "            # coastline stuff, use to delete particles that collide with a coastline\n",
-    "            lats, lons = utils.load_geo_points(plotting_cfg[\"coastline\"])\n",
+    "            lats, lons = utils.load_geo_points(**plotting_cfg[\"coastline\"])\n",
     "            sim.parcels_result.add_coastline(lats, lons)\n",
     "            sim.parcels_result.process_coastline_collisions()\n",
     "            print(\"processed collisions\")\n",
