--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -31,7 +31,8 @@
     "import utils\n",
     "from parcels_utils import HFRGrid, read_netcdf_info\n",
     "from parcels_sim import ParcelsSimulation\n",
-    "from parcels_analysis import add_feature_set_to_result"
+    "from parcels_analysis import add_feature_set_to_result\n",
+    "from plot_features import BuoyPathFeature"
    ]
   },
   {
@@ -50,9 +51,9 @@
    "outputs": [],
    "source": [
     "configs = [\n",
-    "    \"plume_track.json\",\n",
+    "#     \"plume_track.json\",\n",
     "#     \"tijuana_now.json\",\n",
-    "#     \"buoy_track.json\",\n",
+    "    \"buoy_track_704_02.json\",\n",
     "]\n",
     "\n",
     "loaded_configs = [utils.load_config(utils.PARCELS_CONFIGS_DIR / path) for path in configs]\n",
@@ -131,16 +132,27 @@
    },
    "outputs": [],
    "source": [
+    "def handle_postprocessing(result, postprocess_cfg):\n",
+    "    if \"coastline\" in postprocess_cfg and postprocess_cfg[\"coastline\"] not in empty:\n",
+    "        # coastline stuff, use to delete particles that collide with a coastline\n",
+    "        lats, lons = utils.load_geo_points(**postprocess_cfg[\"coastline\"])\n",
+    "        result.add_coastline(lats, lons)\n",
+    "        result.process_coastline_collisions()\n",
+    "        print(\"processed collisions\")\n",
+    "    if \"buoy\" in postprocess_cfg and postprocess_cfg[\"buoy\"] not in empty:\n",
+    "        result.add_plot_feature(BuoyPathFeature.from_csv(postprocess_cfg[\"buoy\"][\"path\"]), \"buoy\")\n",
+    "        result.write_feature_dists([\"buoy\"])\n",
+    "        print(\"processed buoy distances\")\n",
+    "    result.write_data(override=True)\n",
+    "\n",
+    "empty = (None, {}, \"\", [])\n",
     "for i, sim in enumerate(sims):\n",
     "    cfg = loaded_configs[i]\n",
+    "    postprocess_cfg = cfg[\"postprocess_config\"]\n",
+    "    handle_postprocessing(sim.parcels_result, postprocess_cfg)\n",
+    "    sim.parcels_result.write_data(override=True)\n",
     "    if cfg[\"save_snapshots\"]:\n",
     "        plotting_cfg = cfg[\"plotting_config\"]\n",
-    "        if \"coastline\" in plotting_cfg and plotting_cfg[\"coastline\"] not in (None, {}):\n",
-    "            # coastline stuff, use to delete particles that collide with a coastline\n",
-    "            lats, lons = utils.load_geo_points(**plotting_cfg[\"coastline\"])\n",
-    "            sim.parcels_result.add_coastline(lats, lons)\n",
-    "            sim.parcels_result.process_coastline_collisions()\n",
-    "            print(\"processed collisions\")\n",
     "        if \"plot_feature_set\" in plotting_cfg and plotting_cfg[\"plot_feature_set\"] not in (None, \"\"):\n",
     "            add_feature_set_to_result(sim.parcels_result, plotting_cfg[\"plot_feature_set\"])\n",
     "        sim.parcels_result.generate_all_plots(os.path.join(plotting_cfg[\"save_dir_snapshots\"], sim.name), domain=plotting_cfg[\"shown_domain\"], land=plotting_cfg[\"draw_coasts\"])\n",
