--- a/parcels_regions.ipynb
+++ b/parcels_regions.ipynb
@@ -132,6 +132,8 @@
    },
    "outputs": [],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "def handle_postprocessing(result, postprocess_cfg):\n",
     "    if \"coastline\" in postprocess_cfg and postprocess_cfg[\"coastline\"] not in empty:\n",
     "        # coastline stuff, use to delete particles that collide with a coastline\n",
@@ -140,7 +142,11 @@
     "        result.process_coastline_collisions()\n",
     "        print(\"processed collisions\")\n",
     "    if \"buoy\" in postprocess_cfg and postprocess_cfg[\"buoy\"] not in empty:\n",
-    "        result.add_plot_feature(BuoyPathFeature.from_csv(postprocess_cfg[\"buoy\"][\"path\"]), \"buoy\")\n",
+    "        result.add_plot_feature(\n",
+    "            BuoyPathFeature.from_csv(\n",
+    "                postprocess_cfg[\"buoy\"][\"path\"], backstep_delta=np.timedelta64(1, \"h\"), backstep_count=12\n",
+    "            ), \"buoy\"\n",
+    "        )\n",
     "        result.write_feature_dists([\"buoy\"])\n",
     "        print(\"processed buoy distances\")\n",
     "    result.write_data(override=True)\n",
