Refactor gapfilling code

--- a/gapfilling.ipynb
+++ b/gapfilling.ipynb
@@ -66,7 +66,8 @@
     "\n",
     "import utils\n",
     "from parcels_utils import xr_dataset_to_fieldset, HFRGrid\n",
-    "from constants import *"
+    "from constants import *\n",
+    "from gapfilling import InterpolationStep, SmoothnStep, Gapfiller"
    ]
   },
   {
@@ -108,52 +109,13 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### check validity of interpolation references"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def validate_grids(target, references, mask=None):\n",
-    "    targ_times, targ_lats, targ_lons = target.get_coords()\n",
-    "    targ_min = (targ_lats[0], targ_lons[0])\n",
-    "    targ_max = (targ_lats[-1], targ_lons[-1])\n",
-    "    # check references\n",
-    "    for ref in references:\n",
-    "        ref_times, ref_lats, ref_lons = ref.get_coords()\n",
-    "        lat_inbounds = (ref_lats[0] <= targ_min[0]) and (ref_lats[-1] >= targ_max[0])\n",
-    "        lon_inbounds = (ref_lons[0] <= targ_min[1]) and (ref_lons[-1] >= targ_max[1])\n",
-    "        time_inbounds = (ref_times[0] <= targ_times[0]) and (ref_times[-1] >= targ_times[-1])\n",
-    "        if not (lat_inbounds and lon_inbounds and time_inbounds):\n",
-    "            raise ValueError(\"Incorrect reference dimensions\")\n",
-    "    # check mask\n",
-    "    if mask is not None:\n",
-    "        _, mask_lats, mask_lons = mask.get_coords()\n",
-    "        mask_same_res = (len(targ_lats) == len(mask_lats)) and (len(targ_lons) == len(mask_lons))\n",
-    "        if not mask_same_res:\n",
-    "            raise ValueError(\"Mask is not the same lat/lon shape as target\")\n",
-    "        # mask should just be sliced before being used\n",
-    "        # change these asserts to >= later when that's done\n",
-    "        lat_inbounds = (mask_lats[0] == targ_min[0]) and (mask_lats[-1] == targ_max[0])\n",
-    "        lon_inbounds = (mask_lons[0] == targ_min[1]) and (mask_lons[-1] == targ_max[1])\n",
-    "        if not (lat_inbounds and lon_inbounds):\n",
-    "            raise ValueError(\"Incorrect mask dimensions\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# comment this out if you so desire, at your own risk :)\n",
-    "validate_grids(target, interp_references, mask=mask_nc)"
+    "gapfiller = Gapfiller()\n",
+    "gapfiller.add_steps(InterpolationStep(interp_references), SmoothnStep())"
    ]
   },
   {
@@ -179,21 +141,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "if mask_nc is not None:\n",
-    "    no_data = utils.generate_mask_none(mask_nc.xrds[\"u\"].values)\n",
-    "    no_data = np.tile(no_data, (target.xrds[\"time\"].size, 1, 1))\n",
-    "invalid = utils.generate_mask_invalid(target.xrds[\"u\"].values)\n",
-    "invalid_pos = np.where(invalid)\n",
-    "num_invalid = invalid.sum()\n",
-    "print(f\"total invalid values on target data: {num_invalid}\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -205,65 +152,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_interped(i, ref, invalid_where):\n",
-    "    \"\"\"\n",
-    "    Args:\n",
-    "        i (int): index on invalid_where\n",
-    "        ref (HFRGrid): reference Dataset\n",
-    "        invalid_where (array-like): (3, n) dimensional array representing all invalid positions\n",
-    "    \n",
-    "    Returns:\n",
-    "        (u, v): (nan, nan) if no data was found, interpolated values otherwise\n",
-    "    \"\"\"\n",
-    "    time_diff = np.diff(ref.fieldset_flat.U.grid.time)[0]\n",
-    "    t = invalid_where[0][i]\n",
-    "    lat = target.lats[invalid_where[1][i]]\n",
-    "    lon = target.lons[invalid_where[2][i]]\n",
-    "    current_u, current_v = ref.get_fs_current(t * time_diff, lat, lon)\n",
-    "    current_abs = abs(current_u) + abs(current_v)\n",
-    "    # if both the u and v components are 0, there's probably no data there\n",
-    "    if np.isnan(ref.get_closest_current(t, lat, lon)[0]) or current_abs == 0:\n",
-    "        return np.nan, np.nan\n",
-    "    return current_u, current_v"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "### linear interpolation using lower resolution data"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_interped_u = target.xrds[\"u\"].values.copy()\n",
-    "target_interped_v = target.xrds[\"v\"].values.copy()\n",
-    "invalid_interped = invalid.copy()\n",
-    "for f in interp_references:\n",
-    "    invalid_pos_new = np.where(invalid_interped)\n",
-    "    num_invalid_new = invalid_interped.sum()\n",
-    "    arr_u = np.zeros(num_invalid_new)\n",
-    "    arr_v = np.zeros(num_invalid_new)\n",
-    "    print(f\"Attempting to interpolate {num_invalid_new} points...\")\n",
-    "    for i in range(num_invalid_new):\n",
-    "        c_u, c_v = get_interped(i, f, invalid_pos_new)\n",
-    "        arr_u[i] = c_u\n",
-    "        arr_v[i] = c_v\n",
-    "    target_interped_u[invalid_pos_new] = arr_u\n",
-    "    target_interped_v[invalid_pos_new] = arr_v\n",
-    "    invalid_interped = utils.generate_mask_invalid(target_interped_u)\n",
-    "    print(f\"total invalid values after interpolation with {f}: {invalid_interped.sum()}\")\n",
-    "    print(f\"    values filled: {num_invalid_new - invalid_interped.sum()}\")\n",
-    "print(f\"total invalid values on interpolated: {invalid_interped.sum()}\")"
    ]
   },
   {
@@ -280,48 +172,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matlab.engine\n",
-    "\n",
-    "eng = matlab.engine.start_matlab()\n",
-    "\n",
-    "target_smoothed_u = target_interped_u.copy()\n",
-    "target_smoothed_v = target_interped_v.copy()\n",
-    "u_list = target_smoothed_u.tolist()\n",
-    "v_list = target_smoothed_v.tolist()\n",
-    "\n",
-    "print(f\"Filling {len(u_list)} fields...\")\n",
-    "for i in range(len(u_list)):\n",
-    "    u_mat = matlab.double(u_list[i])\n",
-    "    v_mat = matlab.double(v_list[i])\n",
-    "    uv_smooth = eng.smoothn([u_mat, v_mat], \"robust\")\n",
-    "    u_array = np.empty(uv_smooth[0].size)\n",
-    "    v_array = np.empty(uv_smooth[1].size)\n",
-    "    u_array[:] = uv_smooth[0]\n",
-    "    v_array[:] = uv_smooth[1]\n",
-    "    target_smoothed_u[i] = u_array\n",
-    "    target_smoothed_v[i] = v_array\n",
-    "\n",
-    "eng.quit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# mask the filled data\n",
-    "if mask_nc is not None:\n",
-    "    target_smoothed_u[no_data] = np.nan\n",
-    "    target_smoothed_v[no_data] = np.nan"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -334,10 +184,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# re-add coordinates, dimensions, and metadata to interpolated data\n",
-    "darr_u = utils.conv_to_dataarray(target_smoothed_u, target.xrds[\"u\"])\n",
-    "darr_v = utils.conv_to_dataarray(target_smoothed_v, target.xrds[\"v\"])\n",
-    "target_interped_xrds = target.xrds.drop_vars([\"u\", \"v\"]).assign(u=darr_u, v=darr_v)"
+    "target_interped_xrds = gapfiller.execute(target)"
    ]
   },
   {
